--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,3 @@
 PORT=9000
 DB=mongodb+srv://<admin-username>:<password>@cluster0.wbnyt.mongodb.net/<db-name>?retryWrites=true&w=majority
+SECRET=<secret-key>
