--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules
 /.pnp
 .pnp.js
 dist/**/*
-package-lock.json
+
 
 # testing
 /coverage
@@ -15,6 +15,7 @@ package-lock.json
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
