--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
@@ -48,6 +44,10 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.38",
-    "dotenv-webpack": "^7.1.0"
+    "dotenv-webpack": "^7.1.0",
+    "@types/jest": "^27.5.1",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
